// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`password-group-edit-form renders add form correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <h3>
        Добавить группу
      </h3>
      <form
        class="ant-form ant-form-horizontal css-dev-only-do-not-override-dkbvqv form"
      >
        <div
          class="ant-form-item css-dev-only-do-not-override-dkbvqv"
        >
          <div
            class="ant-row ant-form-item-row css-dev-only-do-not-override-dkbvqv"
          >
            <div
              class="ant-col ant-form-item-label ant-col-sm-24 ant-col-md-8 css-dev-only-do-not-override-dkbvqv"
            >
              <label
                class=""
                for="parentId"
                title="Родительская группа:"
              >
                Родительская группа
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control ant-col-sm-16 ant-col-md-24 css-dev-only-do-not-override-dkbvqv"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <div
                    class="ant-select ant-tree-select ant-select-in-form-item css-dev-only-do-not-override-dkbvqv ant-select-single ant-select-show-arrow"
                  >
                    <div
                      class="ant-select-selector"
                    >
                      <span
                        class="ant-select-selection-search"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-controls="parentId_list"
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-owns="parentId_list"
                          autocomplete="off"
                          class="ant-select-selection-search-input"
                          id="parentId"
                          readonly=""
                          role="combobox"
                          style="opacity: 0;"
                          type="search"
                          unselectable="on"
                          value=""
                        />
                      </span>
                      <span
                        class="ant-select-selection-item"
                        title="Мои пароли2"
                      >
                        Мои пароли2
                      </span>
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-arrow"
                      style="user-select: none;"
                      unselectable="on"
                    >
                      <span
                        aria-label="down"
                        class="anticon anticon-down ant-select-suffix"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="down"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-form-item css-dev-only-do-not-override-dkbvqv"
        >
          <div
            class="ant-row ant-form-item-row css-dev-only-do-not-override-dkbvqv"
          >
            <div
              class="ant-col ant-form-item-label ant-col-sm-24 ant-col-md-8 css-dev-only-do-not-override-dkbvqv"
            >
              <label
                class=""
                for="title"
                title="Наименование:"
              >
                Наименование
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control ant-col-sm-16 ant-col-md-24 css-dev-only-do-not-override-dkbvqv"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    class="ant-input css-dev-only-do-not-override-dkbvqv css-dev-only-do-not-override-dkbvqv"
                    id="title"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-form-item css-dev-only-do-not-override-dkbvqv ant-form-item-hidden"
        >
          <div
            class="ant-row ant-form-item-row css-dev-only-do-not-override-dkbvqv"
          >
            <div
              class="ant-col ant-form-item-control ant-col-sm-16 ant-col-md-24 css-dev-only-do-not-override-dkbvqv"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    class="ant-input css-dev-only-do-not-override-dkbvqv css-dev-only-do-not-override-dkbvqv"
                    id="key"
                    type="hidden"
                    value="0"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-row-end css-dev-only-do-not-override-dkbvqv"
        >
          <div
            class="ant-col css-dev-only-do-not-override-dkbvqv"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-dkbvqv ant-btn-primary"
              type="submit"
            >
              <span>
                Сохранить
              </span>
            </button>
          </div>
          <div
            class="ant-col css-dev-only-do-not-override-dkbvqv"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-dkbvqv ant-btn-default actionButton"
              type="button"
            >
              <span>
                Отмена
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <h3>
      Добавить группу
    </h3>
    <form
      class="ant-form ant-form-horizontal css-dev-only-do-not-override-dkbvqv form"
    >
      <div
        class="ant-form-item css-dev-only-do-not-override-dkbvqv"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-dkbvqv"
        >
          <div
            class="ant-col ant-form-item-label ant-col-sm-24 ant-col-md-8 css-dev-only-do-not-override-dkbvqv"
          >
            <label
              class=""
              for="parentId"
              title="Родительская группа:"
            >
              Родительская группа
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control ant-col-sm-16 ant-col-md-24 css-dev-only-do-not-override-dkbvqv"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  class="ant-select ant-tree-select ant-select-in-form-item css-dev-only-do-not-override-dkbvqv ant-select-single ant-select-show-arrow"
                >
                  <div
                    class="ant-select-selector"
                  >
                    <span
                      class="ant-select-selection-search"
                    >
                      <input
                        aria-autocomplete="list"
                        aria-controls="parentId_list"
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-owns="parentId_list"
                        autocomplete="off"
                        class="ant-select-selection-search-input"
                        id="parentId"
                        readonly=""
                        role="combobox"
                        style="opacity: 0;"
                        type="search"
                        unselectable="on"
                        value=""
                      />
                    </span>
                    <span
                      class="ant-select-selection-item"
                      title="Мои пароли2"
                    >
                      Мои пароли2
                    </span>
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-arrow"
                    style="user-select: none;"
                    unselectable="on"
                  >
                    <span
                      aria-label="down"
                      class="anticon anticon-down ant-select-suffix"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item css-dev-only-do-not-override-dkbvqv"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-dkbvqv"
        >
          <div
            class="ant-col ant-form-item-label ant-col-sm-24 ant-col-md-8 css-dev-only-do-not-override-dkbvqv"
          >
            <label
              class=""
              for="title"
              title="Наименование:"
            >
              Наименование
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control ant-col-sm-16 ant-col-md-24 css-dev-only-do-not-override-dkbvqv"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  class="ant-input css-dev-only-do-not-override-dkbvqv css-dev-only-do-not-override-dkbvqv"
                  id="title"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item css-dev-only-do-not-override-dkbvqv ant-form-item-hidden"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-dkbvqv"
        >
          <div
            class="ant-col ant-form-item-control ant-col-sm-16 ant-col-md-24 css-dev-only-do-not-override-dkbvqv"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  class="ant-input css-dev-only-do-not-override-dkbvqv css-dev-only-do-not-override-dkbvqv"
                  id="key"
                  type="hidden"
                  value="0"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row ant-row-end css-dev-only-do-not-override-dkbvqv"
      >
        <div
          class="ant-col css-dev-only-do-not-override-dkbvqv"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-dkbvqv ant-btn-primary"
            type="submit"
          >
            <span>
              Сохранить
            </span>
          </button>
        </div>
        <div
          class="ant-col css-dev-only-do-not-override-dkbvqv"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-dkbvqv ant-btn-default actionButton"
            type="button"
          >
            <span>
              Отмена
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": Object {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`password-group-edit-form renders add form correctly 2`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <h3>
        Добавить группу
      </h3>
      <form
        class="ant-form ant-form-horizontal css-dev-only-do-not-override-dkbvqv form"
      >
        <div
          class="ant-form-item css-dev-only-do-not-override-dkbvqv ant-form-item-with-help ant-form-item-has-error"
        >
          <div
            class="ant-row ant-form-item-row css-dev-only-do-not-override-dkbvqv"
          >
            <div
              class="ant-col ant-form-item-label ant-col-sm-24 ant-col-md-8 css-dev-only-do-not-override-dkbvqv"
            >
              <label
                class=""
                for="parentId"
                title="Родительская группа:"
              >
                Родительская группа
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control ant-col-sm-16 ant-col-md-24 css-dev-only-do-not-override-dkbvqv"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <div
                    aria-describedby="parentId_help"
                    aria-invalid="true"
                    class="ant-select ant-tree-select ant-select-in-form-item ant-select-status-error css-dev-only-do-not-override-dkbvqv ant-select-single ant-select-show-arrow"
                  >
                    <div
                      class="ant-select-selector"
                    >
                      <span
                        class="ant-select-selection-search"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-controls="parentId_list"
                          aria-describedby="parentId_help"
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-invalid="true"
                          aria-owns="parentId_list"
                          autocomplete="off"
                          class="ant-select-selection-search-input"
                          id="parentId"
                          readonly=""
                          role="combobox"
                          style="opacity: 0;"
                          type="search"
                          unselectable="on"
                          value=""
                        />
                      </span>
                      <span
                        class="ant-select-selection-item"
                        title="Мои пароли2"
                      >
                        Мои пароли2
                      </span>
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-arrow"
                      style="user-select: none;"
                      unselectable="on"
                    >
                      <span
                        aria-label="down"
                        class="anticon anticon-down ant-select-suffix"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="down"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <div
                style="display: flex; flex-wrap: nowrap;"
              >
                <div
                  class="ant-form-item-explain ant-form-item-explain-connected css-dev-only-do-not-override-dkbvqv"
                  id="parentId_help"
                  role="alert"
                >
                  <div
                    class="ant-form-item-explain-error"
                  >
                    Значение задано не верно
                  </div>
                </div>
                <div
                  style="width: 0px; height: 24px;"
                />
              </div>
            </div>
          </div>
          <div
            class="ant-form-item-margin-offset"
            style="margin-bottom: -24px;"
          />
        </div>
        <div
          class="ant-form-item css-dev-only-do-not-override-dkbvqv ant-form-item-with-help ant-form-item-has-error"
        >
          <div
            class="ant-row ant-form-item-row css-dev-only-do-not-override-dkbvqv"
          >
            <div
              class="ant-col ant-form-item-label ant-col-sm-24 ant-col-md-8 css-dev-only-do-not-override-dkbvqv"
            >
              <label
                class=""
                for="title"
                title="Наименование:"
              >
                Наименование
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control ant-col-sm-16 ant-col-md-24 css-dev-only-do-not-override-dkbvqv"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    aria-describedby="title_help"
                    aria-invalid="true"
                    class="ant-input ant-input-status-error css-dev-only-do-not-override-dkbvqv css-dev-only-do-not-override-dkbvqv"
                    id="title"
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <div
                style="display: flex; flex-wrap: nowrap;"
              >
                <div
                  class="ant-form-item-explain ant-form-item-explain-connected css-dev-only-do-not-override-dkbvqv"
                  id="title_help"
                  role="alert"
                >
                  <div
                    class="ant-form-item-explain-error"
                  >
                    Поле не может быть пустым
                  </div>
                </div>
                <div
                  style="width: 0px; height: 24px;"
                />
              </div>
            </div>
          </div>
          <div
            class="ant-form-item-margin-offset"
            style="margin-bottom: -24px;"
          />
        </div>
        <div
          class="ant-form-item css-dev-only-do-not-override-dkbvqv ant-form-item-hidden"
        >
          <div
            class="ant-row ant-form-item-row css-dev-only-do-not-override-dkbvqv"
          >
            <div
              class="ant-col ant-form-item-control ant-col-sm-16 ant-col-md-24 css-dev-only-do-not-override-dkbvqv"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    class="ant-input css-dev-only-do-not-override-dkbvqv css-dev-only-do-not-override-dkbvqv"
                    id="key"
                    type="hidden"
                    value="0"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-row-end css-dev-only-do-not-override-dkbvqv"
        >
          <div
            class="ant-col css-dev-only-do-not-override-dkbvqv"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-dkbvqv ant-btn-primary"
              type="submit"
            >
              <span>
                Сохранить
              </span>
            </button>
          </div>
          <div
            class="ant-col css-dev-only-do-not-override-dkbvqv"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-dkbvqv ant-btn-default actionButton"
              type="button"
            >
              <span>
                Отмена
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <h3>
      Добавить группу
    </h3>
    <form
      class="ant-form ant-form-horizontal css-dev-only-do-not-override-dkbvqv form"
    >
      <div
        class="ant-form-item css-dev-only-do-not-override-dkbvqv ant-form-item-with-help ant-form-item-has-error"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-dkbvqv"
        >
          <div
            class="ant-col ant-form-item-label ant-col-sm-24 ant-col-md-8 css-dev-only-do-not-override-dkbvqv"
          >
            <label
              class=""
              for="parentId"
              title="Родительская группа:"
            >
              Родительская группа
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control ant-col-sm-16 ant-col-md-24 css-dev-only-do-not-override-dkbvqv"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  aria-describedby="parentId_help"
                  aria-invalid="true"
                  class="ant-select ant-tree-select ant-select-in-form-item ant-select-status-error css-dev-only-do-not-override-dkbvqv ant-select-single ant-select-show-arrow"
                >
                  <div
                    class="ant-select-selector"
                  >
                    <span
                      class="ant-select-selection-search"
                    >
                      <input
                        aria-autocomplete="list"
                        aria-controls="parentId_list"
                        aria-describedby="parentId_help"
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-invalid="true"
                        aria-owns="parentId_list"
                        autocomplete="off"
                        class="ant-select-selection-search-input"
                        id="parentId"
                        readonly=""
                        role="combobox"
                        style="opacity: 0;"
                        type="search"
                        unselectable="on"
                        value=""
                      />
                    </span>
                    <span
                      class="ant-select-selection-item"
                      title="Мои пароли2"
                    >
                      Мои пароли2
                    </span>
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-arrow"
                    style="user-select: none;"
                    unselectable="on"
                  >
                    <span
                      aria-label="down"
                      class="anticon anticon-down ant-select-suffix"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
            <div
              style="display: flex; flex-wrap: nowrap;"
            >
              <div
                class="ant-form-item-explain ant-form-item-explain-connected css-dev-only-do-not-override-dkbvqv"
                id="parentId_help"
                role="alert"
              >
                <div
                  class="ant-form-item-explain-error"
                >
                  Значение задано не верно
                </div>
              </div>
              <div
                style="width: 0px; height: 24px;"
              />
            </div>
          </div>
        </div>
        <div
          class="ant-form-item-margin-offset"
          style="margin-bottom: -24px;"
        />
      </div>
      <div
        class="ant-form-item css-dev-only-do-not-override-dkbvqv ant-form-item-with-help ant-form-item-has-error"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-dkbvqv"
        >
          <div
            class="ant-col ant-form-item-label ant-col-sm-24 ant-col-md-8 css-dev-only-do-not-override-dkbvqv"
          >
            <label
              class=""
              for="title"
              title="Наименование:"
            >
              Наименование
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control ant-col-sm-16 ant-col-md-24 css-dev-only-do-not-override-dkbvqv"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  aria-describedby="title_help"
                  aria-invalid="true"
                  class="ant-input ant-input-status-error css-dev-only-do-not-override-dkbvqv css-dev-only-do-not-override-dkbvqv"
                  id="title"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              style="display: flex; flex-wrap: nowrap;"
            >
              <div
                class="ant-form-item-explain ant-form-item-explain-connected css-dev-only-do-not-override-dkbvqv"
                id="title_help"
                role="alert"
              >
                <div
                  class="ant-form-item-explain-error"
                >
                  Поле не может быть пустым
                </div>
              </div>
              <div
                style="width: 0px; height: 24px;"
              />
            </div>
          </div>
        </div>
        <div
          class="ant-form-item-margin-offset"
          style="margin-bottom: -24px;"
        />
      </div>
      <div
        class="ant-form-item css-dev-only-do-not-override-dkbvqv ant-form-item-hidden"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-dkbvqv"
        >
          <div
            class="ant-col ant-form-item-control ant-col-sm-16 ant-col-md-24 css-dev-only-do-not-override-dkbvqv"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  class="ant-input css-dev-only-do-not-override-dkbvqv css-dev-only-do-not-override-dkbvqv"
                  id="key"
                  type="hidden"
                  value="0"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row ant-row-end css-dev-only-do-not-override-dkbvqv"
      >
        <div
          class="ant-col css-dev-only-do-not-override-dkbvqv"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-dkbvqv ant-btn-primary"
            type="submit"
          >
            <span>
              Сохранить
            </span>
          </button>
        </div>
        <div
          class="ant-col css-dev-only-do-not-override-dkbvqv"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-dkbvqv ant-btn-default actionButton"
            type="button"
          >
            <span>
              Отмена
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": Object {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`password-group-edit-form renders add form correctly 3`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <h3>
        Добавить группу
      </h3>
      <form
        class="ant-form ant-form-horizontal css-dev-only-do-not-override-dkbvqv form"
      >
        <div
          class="ant-form-item css-dev-only-do-not-override-dkbvqv ant-form-item-with-help"
        >
          <div
            class="ant-row ant-form-item-row css-dev-only-do-not-override-dkbvqv"
          >
            <div
              class="ant-col ant-form-item-label ant-col-sm-24 ant-col-md-8 css-dev-only-do-not-override-dkbvqv"
            >
              <label
                class=""
                for="parentId"
                title="Родительская группа:"
              >
                Родительская группа
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control ant-col-sm-16 ant-col-md-24 css-dev-only-do-not-override-dkbvqv"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <div
                    class="ant-select ant-tree-select ant-select-in-form-item css-dev-only-do-not-override-dkbvqv ant-select-single ant-select-show-arrow"
                  >
                    <div
                      class="ant-select-selector"
                    >
                      <span
                        class="ant-select-selection-search"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-controls="parentId_list"
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-owns="parentId_list"
                          autocomplete="off"
                          class="ant-select-selection-search-input"
                          id="parentId"
                          readonly=""
                          role="combobox"
                          style="opacity: 0;"
                          type="search"
                          unselectable="on"
                          value=""
                        />
                      </span>
                      <span
                        class="ant-select-selection-item"
                        title="Мои пароли2"
                      >
                        Мои пароли2
                      </span>
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-arrow"
                      style="user-select: none;"
                      unselectable="on"
                    >
                      <span
                        aria-label="down"
                        class="anticon anticon-down ant-select-suffix"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="down"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <div
                style="display: flex; flex-wrap: nowrap;"
              >
                <div
                  class="ant-form-item-explain ant-form-item-explain-connected css-dev-only-do-not-override-dkbvqv"
                  id="parentId_help"
                  role="alert"
                >
                  <div
                    class="ant-form-item-explain-error"
                  >
                    Значение задано не верно
                  </div>
                </div>
                <div
                  style="width: 0px; height: 24px;"
                />
              </div>
            </div>
          </div>
          <div
            class="ant-form-item-margin-offset"
            style="margin-bottom: -24px;"
          />
        </div>
        <div
          class="ant-form-item css-dev-only-do-not-override-dkbvqv ant-form-item-with-help ant-form-item-has-success"
        >
          <div
            class="ant-row ant-form-item-row css-dev-only-do-not-override-dkbvqv"
          >
            <div
              class="ant-col ant-form-item-label ant-col-sm-24 ant-col-md-8 css-dev-only-do-not-override-dkbvqv"
            >
              <label
                class=""
                for="title"
                title="Наименование:"
              >
                Наименование
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control ant-col-sm-16 ant-col-md-24 css-dev-only-do-not-override-dkbvqv"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    class="ant-input ant-input-status-success css-dev-only-do-not-override-dkbvqv css-dev-only-do-not-override-dkbvqv"
                    id="title"
                    type="text"
                    value="test"
                  />
                </div>
              </div>
              <div
                style="display: flex; flex-wrap: nowrap;"
              >
                <div
                  class="ant-form-item-explain ant-form-item-explain-connected css-dev-only-do-not-override-dkbvqv"
                  id="title_help"
                  role="alert"
                >
                  <div
                    class="ant-form-item-explain-error"
                  >
                    Поле не может быть пустым
                  </div>
                </div>
                <div
                  style="width: 0px; height: 24px;"
                />
              </div>
            </div>
          </div>
          <div
            class="ant-form-item-margin-offset"
            style="margin-bottom: -24px;"
          />
        </div>
        <div
          class="ant-form-item css-dev-only-do-not-override-dkbvqv ant-form-item-hidden"
        >
          <div
            class="ant-row ant-form-item-row css-dev-only-do-not-override-dkbvqv"
          >
            <div
              class="ant-col ant-form-item-control ant-col-sm-16 ant-col-md-24 css-dev-only-do-not-override-dkbvqv"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    class="ant-input css-dev-only-do-not-override-dkbvqv css-dev-only-do-not-override-dkbvqv"
                    id="key"
                    type="hidden"
                    value="0"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-row-end css-dev-only-do-not-override-dkbvqv"
        >
          <div
            class="ant-col css-dev-only-do-not-override-dkbvqv"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-dkbvqv ant-btn-primary"
              type="submit"
            >
              <span>
                Сохранить
              </span>
            </button>
          </div>
          <div
            class="ant-col css-dev-only-do-not-override-dkbvqv"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-dkbvqv ant-btn-default actionButton"
              type="button"
            >
              <span>
                Отмена
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <h3>
      Добавить группу
    </h3>
    <form
      class="ant-form ant-form-horizontal css-dev-only-do-not-override-dkbvqv form"
    >
      <div
        class="ant-form-item css-dev-only-do-not-override-dkbvqv ant-form-item-with-help"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-dkbvqv"
        >
          <div
            class="ant-col ant-form-item-label ant-col-sm-24 ant-col-md-8 css-dev-only-do-not-override-dkbvqv"
          >
            <label
              class=""
              for="parentId"
              title="Родительская группа:"
            >
              Родительская группа
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control ant-col-sm-16 ant-col-md-24 css-dev-only-do-not-override-dkbvqv"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  class="ant-select ant-tree-select ant-select-in-form-item css-dev-only-do-not-override-dkbvqv ant-select-single ant-select-show-arrow"
                >
                  <div
                    class="ant-select-selector"
                  >
                    <span
                      class="ant-select-selection-search"
                    >
                      <input
                        aria-autocomplete="list"
                        aria-controls="parentId_list"
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-owns="parentId_list"
                        autocomplete="off"
                        class="ant-select-selection-search-input"
                        id="parentId"
                        readonly=""
                        role="combobox"
                        style="opacity: 0;"
                        type="search"
                        unselectable="on"
                        value=""
                      />
                    </span>
                    <span
                      class="ant-select-selection-item"
                      title="Мои пароли2"
                    >
                      Мои пароли2
                    </span>
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-arrow"
                    style="user-select: none;"
                    unselectable="on"
                  >
                    <span
                      aria-label="down"
                      class="anticon anticon-down ant-select-suffix"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
            <div
              style="display: flex; flex-wrap: nowrap;"
            >
              <div
                class="ant-form-item-explain ant-form-item-explain-connected css-dev-only-do-not-override-dkbvqv"
                id="parentId_help"
                role="alert"
              >
                <div
                  class="ant-form-item-explain-error"
                >
                  Значение задано не верно
                </div>
              </div>
              <div
                style="width: 0px; height: 24px;"
              />
            </div>
          </div>
        </div>
        <div
          class="ant-form-item-margin-offset"
          style="margin-bottom: -24px;"
        />
      </div>
      <div
        class="ant-form-item css-dev-only-do-not-override-dkbvqv ant-form-item-with-help ant-form-item-has-success"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-dkbvqv"
        >
          <div
            class="ant-col ant-form-item-label ant-col-sm-24 ant-col-md-8 css-dev-only-do-not-override-dkbvqv"
          >
            <label
              class=""
              for="title"
              title="Наименование:"
            >
              Наименование
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control ant-col-sm-16 ant-col-md-24 css-dev-only-do-not-override-dkbvqv"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  class="ant-input ant-input-status-success css-dev-only-do-not-override-dkbvqv css-dev-only-do-not-override-dkbvqv"
                  id="title"
                  type="text"
                  value="test"
                />
              </div>
            </div>
            <div
              style="display: flex; flex-wrap: nowrap;"
            >
              <div
                class="ant-form-item-explain ant-form-item-explain-connected css-dev-only-do-not-override-dkbvqv"
                id="title_help"
                role="alert"
              >
                <div
                  class="ant-form-item-explain-error"
                >
                  Поле не может быть пустым
                </div>
              </div>
              <div
                style="width: 0px; height: 24px;"
              />
            </div>
          </div>
        </div>
        <div
          class="ant-form-item-margin-offset"
          style="margin-bottom: -24px;"
        />
      </div>
      <div
        class="ant-form-item css-dev-only-do-not-override-dkbvqv ant-form-item-hidden"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-dkbvqv"
        >
          <div
            class="ant-col ant-form-item-control ant-col-sm-16 ant-col-md-24 css-dev-only-do-not-override-dkbvqv"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  class="ant-input css-dev-only-do-not-override-dkbvqv css-dev-only-do-not-override-dkbvqv"
                  id="key"
                  type="hidden"
                  value="0"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row ant-row-end css-dev-only-do-not-override-dkbvqv"
      >
        <div
          class="ant-col css-dev-only-do-not-override-dkbvqv"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-dkbvqv ant-btn-primary"
            type="submit"
          >
            <span>
              Сохранить
            </span>
          </button>
        </div>
        <div
          class="ant-col css-dev-only-do-not-override-dkbvqv"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-dkbvqv ant-btn-default actionButton"
            type="button"
          >
            <span>
              Отмена
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": Object {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`password-group-edit-form renders edit form correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <h3>
        Редактировать "Мои пароли2-1"
      </h3>
      <form
        class="ant-form ant-form-horizontal css-dev-only-do-not-override-dkbvqv form"
      >
        <div
          class="ant-form-item css-dev-only-do-not-override-dkbvqv"
        >
          <div
            class="ant-row ant-form-item-row css-dev-only-do-not-override-dkbvqv"
          >
            <div
              class="ant-col ant-form-item-label ant-col-sm-24 ant-col-md-8 css-dev-only-do-not-override-dkbvqv"
            >
              <label
                class=""
                for="parentId"
                title="Родительская группа:"
              >
                Родительская группа
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control ant-col-sm-16 ant-col-md-24 css-dev-only-do-not-override-dkbvqv"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <div
                    class="ant-select ant-tree-select ant-select-in-form-item css-dev-only-do-not-override-dkbvqv ant-select-single ant-select-show-arrow"
                  >
                    <div
                      class="ant-select-selector"
                    >
                      <span
                        class="ant-select-selection-search"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-controls="parentId_list"
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-owns="parentId_list"
                          autocomplete="off"
                          class="ant-select-selection-search-input"
                          id="parentId"
                          readonly=""
                          role="combobox"
                          style="opacity: 0;"
                          type="search"
                          unselectable="on"
                          value=""
                        />
                      </span>
                      <span
                        class="ant-select-selection-item"
                        title="Мои пароли2"
                      >
                        Мои пароли2
                      </span>
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-arrow"
                      style="user-select: none;"
                      unselectable="on"
                    >
                      <span
                        aria-label="down"
                        class="anticon anticon-down ant-select-suffix"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="down"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-form-item css-dev-only-do-not-override-dkbvqv"
        >
          <div
            class="ant-row ant-form-item-row css-dev-only-do-not-override-dkbvqv"
          >
            <div
              class="ant-col ant-form-item-label ant-col-sm-24 ant-col-md-8 css-dev-only-do-not-override-dkbvqv"
            >
              <label
                class=""
                for="title"
                title="Наименование:"
              >
                Наименование
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control ant-col-sm-16 ant-col-md-24 css-dev-only-do-not-override-dkbvqv"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    class="ant-input css-dev-only-do-not-override-dkbvqv css-dev-only-do-not-override-dkbvqv"
                    id="title"
                    type="text"
                    value="Мои пароли2-1"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-form-item css-dev-only-do-not-override-dkbvqv ant-form-item-hidden"
        >
          <div
            class="ant-row ant-form-item-row css-dev-only-do-not-override-dkbvqv"
          >
            <div
              class="ant-col ant-form-item-control ant-col-sm-16 ant-col-md-24 css-dev-only-do-not-override-dkbvqv"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    class="ant-input css-dev-only-do-not-override-dkbvqv css-dev-only-do-not-override-dkbvqv"
                    id="key"
                    type="hidden"
                    value="3"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-row-end css-dev-only-do-not-override-dkbvqv"
        >
          <div
            class="ant-col css-dev-only-do-not-override-dkbvqv"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-dkbvqv ant-btn-primary"
              type="submit"
            >
              <span>
                Сохранить
              </span>
            </button>
          </div>
          <div
            class="ant-col css-dev-only-do-not-override-dkbvqv"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-dkbvqv ant-btn-default actionButton"
              type="button"
            >
              <span>
                Отмена
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <h3>
      Редактировать "Мои пароли2-1"
    </h3>
    <form
      class="ant-form ant-form-horizontal css-dev-only-do-not-override-dkbvqv form"
    >
      <div
        class="ant-form-item css-dev-only-do-not-override-dkbvqv"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-dkbvqv"
        >
          <div
            class="ant-col ant-form-item-label ant-col-sm-24 ant-col-md-8 css-dev-only-do-not-override-dkbvqv"
          >
            <label
              class=""
              for="parentId"
              title="Родительская группа:"
            >
              Родительская группа
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control ant-col-sm-16 ant-col-md-24 css-dev-only-do-not-override-dkbvqv"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  class="ant-select ant-tree-select ant-select-in-form-item css-dev-only-do-not-override-dkbvqv ant-select-single ant-select-show-arrow"
                >
                  <div
                    class="ant-select-selector"
                  >
                    <span
                      class="ant-select-selection-search"
                    >
                      <input
                        aria-autocomplete="list"
                        aria-controls="parentId_list"
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-owns="parentId_list"
                        autocomplete="off"
                        class="ant-select-selection-search-input"
                        id="parentId"
                        readonly=""
                        role="combobox"
                        style="opacity: 0;"
                        type="search"
                        unselectable="on"
                        value=""
                      />
                    </span>
                    <span
                      class="ant-select-selection-item"
                      title="Мои пароли2"
                    >
                      Мои пароли2
                    </span>
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-arrow"
                    style="user-select: none;"
                    unselectable="on"
                  >
                    <span
                      aria-label="down"
                      class="anticon anticon-down ant-select-suffix"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item css-dev-only-do-not-override-dkbvqv"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-dkbvqv"
        >
          <div
            class="ant-col ant-form-item-label ant-col-sm-24 ant-col-md-8 css-dev-only-do-not-override-dkbvqv"
          >
            <label
              class=""
              for="title"
              title="Наименование:"
            >
              Наименование
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control ant-col-sm-16 ant-col-md-24 css-dev-only-do-not-override-dkbvqv"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  class="ant-input css-dev-only-do-not-override-dkbvqv css-dev-only-do-not-override-dkbvqv"
                  id="title"
                  type="text"
                  value="Мои пароли2-1"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item css-dev-only-do-not-override-dkbvqv ant-form-item-hidden"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-dkbvqv"
        >
          <div
            class="ant-col ant-form-item-control ant-col-sm-16 ant-col-md-24 css-dev-only-do-not-override-dkbvqv"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  class="ant-input css-dev-only-do-not-override-dkbvqv css-dev-only-do-not-override-dkbvqv"
                  id="key"
                  type="hidden"
                  value="3"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row ant-row-end css-dev-only-do-not-override-dkbvqv"
      >
        <div
          class="ant-col css-dev-only-do-not-override-dkbvqv"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-dkbvqv ant-btn-primary"
            type="submit"
          >
            <span>
              Сохранить
            </span>
          </button>
        </div>
        <div
          class="ant-col css-dev-only-do-not-override-dkbvqv"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-dkbvqv ant-btn-default actionButton"
            type="button"
          >
            <span>
              Отмена
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": Object {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;
